# python-monorepo-experiment

./: README.md  dagger.json  main.py  pyproject.toml
.dagger/: pyproject.toml
.dagger/src/monorepo_dagger/: main.py
.github/workflows/: app.pr.yaml  app.release.yaml
libs/lib1/: pyproject.toml
libs/lib1/src/lib1/: __init__.py
libs/lib2/: pyproject.toml
libs/lib2/src/lib2/: __init__.py
libs/lib3/: pyproject.toml
libs/lib3/src/lib3/: __init__.py
projects/app/: pyproject.toml
projects/app/src/app/: __init__.py
projects/app/templates/: template.jinja
projects/app/tests/: test_variable_set.py
