[project]
name = "lib3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sessional", email = "Sessional@users.noreply.github.com" }
]
requires-python = ">=3.12.2"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
